Update Tugas Modul 2 - Quotes to scrape

--- a/Praktikum 2/praktikum_bigdata_pertemuan2.ipynb
+++ b/Praktikum 2/praktikum_bigdata_pertemuan2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNDanvwbppVhCZelX1XdI/3",
+      "authorship_tag": "ABX9TyPW35RbzIln1rOWCHLuyHC0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 167,
       "metadata": {
         "id": "Y538mkQxaOtE"
       },
@@ -42,24 +42,27 @@
     {
       "cell_type": "code",
       "source": [
-        "url = \"https://quotes.toscrape.com/\"\n",
-        "response = requests.get(url)\n"
+        "base_url = \"https://quotes.toscrape.com\"\n",
+        "all_quotes_data = []\n",
+        "\n",
+        "for page in range(1, 4):\n",
+        "    url = base_url.format(page)\n",
+        "    response = requests.get(url)\n",
+        "\n",
+        "    soup = BeautifulSoup(response.text, \"html.parser\")\n",
+        "\n",
+        "    quotes = soup.find_all(\"div\", class_=\"quote\")\n",
+        "\n",
+        "    for quote in quotes:\n",
+        "        text = quote.find(\"span\", class_=\"text\").text\n",
+        "        author = quote.find(\"small\", class_=\"author\").text\n",
+        "        tags = [tag.text for tag in quote.find_all(\"a\", class_=\"tag\")]\n",
+        "        all_quotes_data.append({\"Quote\": text, \"Author\": author, \"Tags\": \", \".join(tags)})"
       ],
       "metadata": {
         "id": "H8acQQM_aguE"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "soup = BeautifulSoup(response.text, \"html.parser\")"
-      ],
-      "metadata": {
-        "id": "vzBDDnnIbLig"
-      },
-      "execution_count": null,
+      "execution_count": 168,
       "outputs": []
     },
     {
@@ -71,34 +74,34 @@
       "metadata": {
         "id": "HR_xvchBbvwm"
       },
-      "execution_count": null,
+      "execution_count": 169,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "with open(\"quotes.csv\", \"w\", newline=\"\", encoding=\"utf-8\") as file:\n",
-        "    writer = csv.writer(file)\n",
-        "    writer.writerow([\"Quote\", \"Author\"])\n",
-        "    for quote, author in zip(quotes, authors):\n",
-        "        writer.writerow([quote.text, author.text])\n",
+        "with open(\"quotes2.csv\", \"w\", newline=\"\", encoding=\"utf-8\") as file:\n",
+        "    writer = csv.DictWriter(file, fieldnames=[\"Quote\", \"Author\", \"Tags\"])\n",
+        "    writer.writeheader()\n",
+        "    for quote_data in all_quotes_data:\n",
+        "        writer.writerow(quote_data)\n",
         "\n",
-        "print(\"Scraping selesai, data tersimpan di quotes.csv\")"
+        "print(\"Scraping selesai, data tersimpan di quotes2.csv\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "M0pfnYnPcVZJ",
-        "outputId": "4a9f2acf-4108-48ae-e1e4-60f248824454"
+        "outputId": "1cf3e8af-405a-483c-d223-4c64973ed75c"
       },
-      "execution_count": null,
+      "execution_count": 170,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Scraping selesai, data tersimpan di quotes.csv\n"
+            "Scraping selesai, data tersimpan di quotes2.csv\n"
           ]
         }
       ]
