--- a/Praktikum 5/Praktikum_big_data__05.ipynb
+++ b/Praktikum 5/Praktikum_big_data__05.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPNe8Kl2U3et5oiNid1AY74",
+      "authorship_tag": "ABX9TyOauBI/Xr8BE4WjbeDT8RQ1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1231,7 +1231,13 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "1. dari visualisasi histogram untuk trestbps bisa dilihat tekanan darah rata rata pasien berapa di angka 120 - 140 dengan frekuensi diatas 30\n",
+        "2. untuk bagian boxplot oldpeak mengungkap kondisi klinis yang relevan terhadap kesehatan jantung.\n",
+        "3. untuk bagian countplot chest pain ini berisikan kategori untuk sakit dada yang dialami pasien atau typenya yang ada 4 macam ( 1, 2, 3, 4)\n",
+        "4. untuk pie chart menampilkan golongan thalasemia yang terdapat 3 macam dengan persentase terbesar pada golongan thalesemia 2 yaitu 55.1%,\n",
+        "5. korelasi untuk age dan thalach dominan pada usia 40 - 60 tahun dengan rata rata thalach antara 140 - 180\n"
+      ],
       "metadata": {
         "id": "-79TZ3M0m8fH"
       }
