Dibuat menggunakan Colab

--- a/Praktikum 8/Praktikum_8_Big_Data_2311531009.ipynb
+++ b/Praktikum 8/Praktikum_8_Big_Data_2311531009.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOoc0QcjjvsPeR66beORFlN",
+      "authorship_tag": "ABX9TyPC/D6pVhfEnVSG5rfUG/s9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1995,6 +1995,58 @@
             }
           },
           "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.linear_model import LogisticRegression\n",
+        "import joblib\n",
+        "\n",
+        "logreg = LogisticRegression(max_iter=1000, random_state=42)\n",
+        "logreg.fit(X_train, y_train)\n",
+        "\n",
+        "#prediksi\n",
+        "pred_lr = logreg.predict(X_test)\n",
+        "\n",
+        "#evaluasi\n",
+        "acc_lr = accuracy_score(y_test, pred_lr)\n",
+        "prec_lr = precision_score(y_test, pred_lr)\n",
+        "rec_lr = recall_score(y_test, pred_lr)\n",
+        "f1_lr = f1_score(y_test, pred_lr)\n",
+        "print(\"\\n=== Logistic Regression baseline pertemuan 7 ===\")\n",
+        "print(f\"Accuracy: {acc_lr}\")\n",
+        "print(f\"Precision: {prec_lr}\")\n",
+        "print(f\"Recall: {rec_lr}\")\n",
+        "print(f\"F1 Score: {f1_lr}\")\n",
+        "\n",
+        "#save model\n",
+        "\n",
+        "joblib.dump(logreg, 'logreg_heast_model.joblib')\n",
+        "print(\"Model logistic regression berhasil disimpan sebagai logreg_heast_model.joblib\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Vz4bc_r9LcHb",
+        "outputId": "d4f058ee-e893-4a99-de26-01587f4eb962"
+      },
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "=== Logistic Regression baseline pertemuan 7 ===\n",
+            "Accuracy: 0.8833333333333333\n",
+            "Precision: 0.9032258064516129\n",
+            "Recall: 0.875\n",
+            "F1 Score: 0.8888888888888888\n",
+            "Model logistic regression berhasil disimpan sebagai logreg_heast_model.joblib\n"
+          ]
         }
       ]
     }
